--- a/package.json
+++ b/package.json
@@ -17,6 +17,20 @@
   },
   "homepage": "https://github.com/geoklown/travelville_demo#readme",
   "devDependencies": {
-    "gulp": "^4.0.1"
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/register": "^7.4.4",
+    "babel-core": "^6.26.3",
+    "del": "^4.1.1",
+    "gulp": "^4.0.1",
+    "gulp-clean-css": "^4.2.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-uglify": "^3.0.2",
+    "node-sass": "^4.12.0"
+  },
+  "dependencies": {
+    "gulp-babel": "^8.0.0"
   }
 }
